update ioi analysis
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/script/RNotebook/ioi.Rmd
+++ b/script/RNotebook/ioi.Rmd
@@ -1,30 +1,32 @@
 ---
-title: 'Analysis: The Sound of Teaching Music 1'
+title: 'Tempo Analysis: The Sound of Teaching Music 1'
 output:
   html_notebook: default
 editor_options: 
   chunk_output_type: inline
 ---
 
-##### Description: This is a summary of all analyses for a tempo.
+Description: This is a summary of all analyses for a tempo.
+
+- Last checked: 07/02/20
 
 # Outline - Interonset intervals (IOIs)
-### [Experimental Design](#design)
+## [Experimental Design](#design)
 
-### [Articulation](#ioi-articulation)
+## [Articulation](#ioi-articulation)
 
 - Individual results
   + [All](#art_ind_all)
   + [Phrase bondaries](#art_ind_phrase)
   + [Trial by trial](#art_ind_trial)
-  + [Variability all](#art_ind_var_all)
+  + [Variability](#art_ind_var_all)
   + [Variability trial-by-trial](#art_ind_var_trial)
  
 - Group results and stats (if available)
   + [All](#art_group_all)
   + [Phrase bondaries](#art_group_phrase)
   + [Trial by trial](#art_group_trial)
-  + [Variability all](#art_group_var_all)
+  + [Variability](#art_group_var_all)
   + [Variability trial-by-trial](#art_group_var_trial)
    
 - Order analysis (teaching/performing first?)
@@ -32,7 +34,7 @@ editor_options:
   
 - [Sequence plot](#sequence_art)
 
-### [Dynamics](#ioi-dynamics)
+## [Dynamics](#ioi-dynamics)
 
 - Individual results
   + [All](#dyn_ind_all)
@@ -55,9 +57,9 @@ editor_options:
 
 ## Experimental Design{#design}
 - Independent variables: Condition (2 levels: teaching vs. performing) x Skill (2 levels: articulation vs. dynamics)
-- Dependent variables: Interonset intervals, variability (SD/mean IOI)
+- Dependent variables: Interonset intervals, Variability (SD/mean IOI)
 
-### Main predictions
+## Main predictions
 Participants will play slower while teaching regardless of the skills.
 
 ```{r setup, include = FALSE}
@@ -89,8 +91,8 @@ df_ioi_art <- df_ioi %>% dplyr::filter(Skill == "articulation")
 df_ioi_dyn <- df_ioi %>% dplyr::filter(Skill == "dynamics")
 ```
 
-## IOI-Articulation 
-### 1. All - individual{#art_ind_all}
+# IOI-Articulation 
+## 1. All - individual{#art_ind_all}
 - Average IOIs for each participant.
 
 ```{r ioi_art, echo = FALSE}
@@ -103,10 +105,10 @@ colnames(ioi_art) <- c("SubNr", "Condition", "Skill", "N", "Mean", "SD")
 print(ioi_art)
 ```
 
-#### Plot
-##### Bar chart
+### Plot
+#### Bar chart
 - Error bars show SD of the mean
-- A dashed line represents the tempo given by a metronome (80bpm)
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_art_bar,  echo = FALSE}
 p_ioi_art <- ggplot(data = ioi_art, aes(x = SubNr, y = Mean, fill = Condition)) +
@@ -114,12 +116,12 @@ p_ioi_art <- ggplot(data = ioi_art, aes(x = SubNr, y = Mean, fill = Condition)) 
   geom_errorbar(aes(ymin = Mean - SD, ymax = Mean + SD),
                 width = .2, position = position_dodge(.9)) +
   geom_hline(yintercept = 188, linetype = "dashed") + # Tempo
-  #annotate("text", 18, 188, label = "Tempo (80bpm)", vjust = -2, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
-  labs(y = "IOI (ms)", subtitle = "IOI: Articulation")
+  #annotate("text", 18, 188, label = "Tempo (80bpm / IOI-188ms)", vjust = -2, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
+  labs(y = "IOI (ms)", subtitle = "IOI: Articulation") + coord_cartesian(ylim = c(100, 280))
 p_ioi_art
 ```
 
-### 2. All - group{#art_group_all}
+## 2. All - group{#art_group_all}
 - Average IOIs for each condition.
 - Hypothesis: Participants will play slower when teaching.
 
@@ -133,10 +135,10 @@ colnames(ioi_art_all) <- c("Condition", "Skill", "N", "Mean", "SD", "SEM")
 print(ioi_art_all)
 ```
 
-#### Plot
-##### Bar chart
+### Plot
+#### Bar chart
 - Error bars show SEM of the mean
-- A dashed line represents the tempo given by a metronome (80bpm)
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_art_all_bar, echo = FALSE}
 p_ioi_art_all <- ggplot(data = ioi_art_all, aes(x = Condition, y = Mean, fill = Condition)) +
@@ -144,47 +146,47 @@ p_ioi_art_all <- ggplot(data = ioi_art_all, aes(x = Condition, y = Mean, fill = 
   geom_errorbar(aes(ymin = Mean - SEM, ymax = Mean + SEM),
                 width=.2, position = position_dodge(.9)) +
   geom_hline(yintercept = 188, linetype = "dashed") + # Tempo
-  #annotate("text", 1.5, 188, label = "Tempo (80bpm)", vjust = -2, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
+  #annotate("text", 1.5, 188, label = "Tempo (80bpm / IOI-188ms)", vjust = -2, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
   labs(y = "IOI (ms)", subtitle = "IOI: Articulation") + coord_cartesian(ylim = c(120, 210)) +
   theme(legend.position = "None")
 p_ioi_art_all
 ```
 
-##### Box plot
-- A dashed line represents the tempo given by a metronome (80bpm)
+#### Box plot
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_art_all_box, echo = FALSE}
 p_ioi_art_all_box <- ggplot(data = ioi_art, aes(x = Condition, y = Mean, fill = Condition)) +
   geom_boxplot() +
   geom_dotplot(binaxis = "y", stackdir = "center", dotsize = 1) +
   geom_hline(yintercept = 188, linetype = "dashed") + # Tempo
-  #annotate("text", 1.5, 188, label = "Tempo (80bpm)", vjust = 5, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
+  #annotate("text", 1.5, 188, label = "Tempo (80bpm / IOI-188ms)", vjust = 5, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
   labs(y = "IOI (ms)", subtitle = "IOI: Articulation") + #coord_cartesian(ylim = c(100, 210)) +
   theme(legend.position = "None")
 p_ioi_art_all_box
 ```
 
-#### Statistics
-##### Normality check
+### Statistics
+#### Normality check
 ```{r normality1, echo = FALSE}
 # Normality check
 ioi_art_norm <- by(ioi_art$Mean, list(ioi_art$Condition), shapiro.test)
 print(ioi_art_norm)
 ```
 
-##### Paired t-test
+#### Paired t-test
 ```{r stats1, echo = FALSE}
 ioi_art_ttest <- t.test(ioi_art$Mean[ioi_art$Condition == "teaching"], ioi_art$Mean[ioi_art$Condition == "performing"], paired = TRUE)
 print(ioi_art_ttest)
 ```
 
-##### Effect size
+#### Effect size
 ```{r stats2, echo = FALSE}
 ioi_art_cohend <- cohen.d(ioi_art$Mean, ioi_art$Condition, paired = TRUE)
 print(ioi_art_cohend)
 ```
 
-### 3. Phrase boundaries - individual{#art_ind_phrase}
+## 3. Phrase boundaries - individual{#art_ind_phrase}
 - Compare IOIs at phrase boundaries with others fir each participant.
 
 ```{r ioi_art_ch, echo = FALSE}
@@ -201,10 +203,10 @@ colnames(ioi_art_ch) <- c("SubNr", "Condition", "Skill", "Boundary", "N", "Mean"
 print(ioi_art_ch)
 ```
 
-#### Plot
-##### Bar chart
+### Plot
+#### Bar chart
 - Error bars show SD of the mean
-- A dashed line represents the tempo given by a metronome (80bpm)
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_art_ch_bar, echo = FALSE}
 p_ioi_art_ch <- ggplot(data = ioi_art_ch, aes(x = SubNr, y = Mean, fill = Condition)) +
@@ -213,12 +215,12 @@ p_ioi_art_ch <- ggplot(data = ioi_art_ch, aes(x = SubNr, y = Mean, fill = Condit
                 width = .2, position = position_dodge(.9)) +
   facet_grid(Boundary ~ .) +
   geom_hline(yintercept = 188, linetype = "dashed") + # Tempo
-  #annotate("text", 18, 188, label = "Tempo (80bpm)", vjust = -2, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
+  #annotate("text", 18, 188, label = "Tempo (80bpm / IOI-188ms)", vjust = -2, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
   labs(y = "IOI (ms)", subtitle = "IOI: Articulation") + coord_cartesian(ylim = c(100, 280))
 p_ioi_art_ch
 ```
 
-### 4. Phrase boundaries - group{#art_group_phrase}
+## 4. Phrase boundaries - group{#art_group_phrase}
 - Compare IOIs at phrase boundaries with others in the two conditions.
 - Hypothesis: Participants will play more slowly at phrase boundaries compared to other locations.
 
@@ -232,9 +234,10 @@ colnames(ioi_art_ch_all) <- c("Condition", "Skill", "Boundary", "N", "Mean", "SD
 print(ioi_art_ch_all)
 ```
 
-#### Plot
+### Plot
+#### Bar chart
 - Error bars show SEM of the mean
-- A dashed line represents the tempo given by a metronome (80bpm)
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_art_ch_all_bar, echo = FALSE}
 p_ioi_art_ch_all_bar <- ggplot(data = ioi_art_ch_all, aes(x = Boundary, y = Mean, fill = Condition)) +
@@ -242,33 +245,33 @@ p_ioi_art_ch_all_bar <- ggplot(data = ioi_art_ch_all, aes(x = Boundary, y = Mean
   geom_errorbar(aes(ymin = Mean - SEM, ymax = Mean + SEM),
                 width=.2, position = position_dodge(.9)) +
   geom_hline(yintercept = 188, linetype = "dashed") + # Tempo
-  #annotate("text", 1, 188, label = "Tempo (80bpm)", vjust = 2, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
+  #annotate("text", 1, 188, label = "Tempo (80bpm / IOI-188ms)", vjust = 2, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
   #facet_grid(. ~ Boundary) +
-  labs(y = "IOI (ms)", subtitle = "IOI: Articulation") + coord_cartesian(ylim = c(100, 250))
+  labs(y = "IOI (ms)", subtitle = "IOI: Articulation") + coord_cartesian(ylim = c(100, 210))
 p_ioi_art_ch_all_bar
 ```
 
-##### Box plot
-- A dashed line represents the tempo given by a metronome (80bpm)
+#### Box plot
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_art_ch_all_box, echo = FALSE}
 p_ioi_art_ch_box <- ggplot(data = ioi_art_ch, aes(x = Boundary, y = Mean, fill = Condition)) +
   geom_boxplot() +
   geom_dotplot(binaxis = "y", stackdir = "center", dotsize = 1, position = position_dodge(0.75)) +
   geom_hline(yintercept = 188, linetype = "dashed") + # Tempo
-  #annotate("text", 1.5, 188, label = "Tempo (80bpm)", vjust = 5, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
+  #annotate("text", 1.5, 188, label = "Tempo (80bpm / IOI-188ms)", vjust = 5, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
   labs(y = "IOI (ms)", subtitle = "IOI: Articulation")
 p_ioi_art_ch_box
 ```
 
-#### Statistics
-##### Normality check
+### Statistics
+#### Normality check
 ```{r normality2, echo = FALSE}
 ioi_art_ch_norm <- by(ioi_art_ch$Mean, list(ioi_art_ch$Condition, ioi_art_ch$Boundary), shapiro.test)
 print(ioi_art_ch_norm)
 ```
 
-##### Two-way ANOVA (ez)
+#### Two-way ANOVA (ez)
 ```{r stats3, echo = FALSE}
 ioi_art_ch_aov <- ezANOVA(
   data = df_ioi_art
@@ -283,13 +286,13 @@ ioi_art_ch_aov$ANOVA$p <- round(ioi_art_ch_aov$ANOVA$p, 4)
 print(ioi_art_ch_aov$ANOVA)
 ```
 
-##### Two-way ANOVA (aov)
+#### Two-way ANOVA (aov)
 ```{r stats4, echo = FALSE}
 ioi_art_ch_aov_2 <- aov(Mean ~ Condition*Boundary + Error(SubNr/(Condition*Boundary)), data = ioi_art_ch)
 print(summary(ioi_art_ch_aov_2))
 ```
 
-### 5. Trial by trial - individual{#art_ind_trial}
+## 5. Trial by trial - individual{#art_ind_trial}
 - Average IOIs for each trial for each participant.
 
 ```{r ioi_art_trial, echo = FALSE}
@@ -302,9 +305,9 @@ colnames(ioi_art_trial) <- c("SubNr", "Condition", "Skill", "TrialNr", "N", "Mea
 print(ioi_art_trial)
 ```
 
-#### Plot
-##### Line graph
-- A dashed line represents the tempo given by a metronome (80bpm)
+### Plot
+#### Line graph
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_art_trial_line, echo = FALSE, fig.height = 8}
 p_ioi_art_trial <- ggplot(data = ioi_art_trial, aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
@@ -316,7 +319,7 @@ p_ioi_art_trial <- ggplot(data = ioi_art_trial, aes(x = TrialNr, y = Mean, group
 p_ioi_art_trial
 ```
 
-### 6. Trial by trial - group{#art_group_trial}
+## 6. Trial by trial - group{#art_group_trial}
 - Average IOIs for each trial for each condition.
 
 ```{r ioi_art_trial_all, echo = FALSE}
@@ -329,10 +332,10 @@ colnames(ioi_art_trial_all) <- c("Condition", "Skill", "TrialNr", "N", "Mean", "
 print(ioi_art_trial_all)
 ```
 
-#### Plot
-##### Line graph
+### Plot
+#### Line graph
 - Error bars show SEM of the mean
-- A dashed line represents the tempo given by a metronome (80bpm)
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_art_trial_all_line, echo = FALSE}
 p_ioi_art_trial_all <- ggplot(data = ioi_art_trial_all, aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
@@ -344,18 +347,18 @@ p_ioi_art_trial_all <- ggplot(data = ioi_art_trial_all, aes(x = TrialNr, y = Mea
 p_ioi_art_trial_all
 ```
 
-### 7. Variability all - individual{#art_ind_var_all}
+## 7. Variability all - individual{#art_ind_var_all}
 - Average variability for each participant.
 - IOI variability = SD/mean IOI (per trial)
 
 ```{r ioi_art_var, echo = FALSE}
-# Create a data frame for variability (SD/)
+# Create a data frame for Variability (SD/mean IOI)
 df_ioi_art_var <- data.frame()
 for (subnr in unique(df_ioi_art$SubNr)){
-  for (block in unique(df_ioi_art$BlockNr)){
+  for (block in c(1:4)){
     cond = as.character(unique(df_ioi_art$Condition[df_ioi_art$SubNr == subnr & df_ioi_art$BlockNr == block]))
     skill = as.character(unique(df_ioi_art$Skill[df_ioi_art$SubNr == subnr & df_ioi_art$BlockNr == block]))
-    for (trial in unique(df_ioi_art$TrialNr)){
+    for (trial in c(1:8)){
       df_current <- df_ioi_art %>% dplyr::filter(SubNr == subnr & BlockNr == block & TrialNr == trial)
       if (nrow(df_current) != 0){
         df_ioi_art_var <- rbind(df_ioi_art_var, 
@@ -376,10 +379,10 @@ colnames(ioi_art_var) <- c("SubNr", "Condition", "Skill", "N", "Mean", "SD")
 print(ioi_art_var)
 ```
 
-#### Plot
-##### Bar graph
+### Plot
+#### Bar graph
 - Error bars show SD of the mean
-- A dashed line represents the tempo given by a metronome (80bpm)
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_art_var_bar, echo = FALSE}
 p_ioi_art_var <- ggplot(data = ioi_art_var, aes(x = SubNr, y = Mean, fill = Condition)) +
@@ -390,7 +393,7 @@ p_ioi_art_var <- ggplot(data = ioi_art_var, aes(x = SubNr, y = Mean, fill = Cond
 p_ioi_art_var
 ```
 
-### 8. Variability all - group{#art_group_var_all}
+## 8. Variability all - group{#art_group_var_all}
 - Average variability for each condition.
 
 ```{r ioi_art_var_all, echo = FALSE}
@@ -403,8 +406,8 @@ colnames(ioi_art_var_all) <- c("Condition", "Skill", "N", "Mean", "SD", "SEM")
 print(ioi_art_var_all)
 ```
 
-#### Plot
-##### Bar graph
+### Plot
+#### Bar graph
 - Error bars show SEM of the mean
 
 ```{r ioi_art_var_all_bar, echo = FALSE}
@@ -417,7 +420,7 @@ p_ioi_art_var_all <- ggplot(data = ioi_art_var_all, aes(x = Condition, y = Mean,
 p_ioi_art_var_all
 ```
 
-##### Box plot
+#### Box plot
 ```{r ioi_art_var_all_box, echo = FALSE}
 p_ioi_art_var_box <- ggplot(data = ioi_art_var, aes(x = Condition, y = Mean, fill = Condition)) +
   geom_boxplot() +
@@ -427,26 +430,26 @@ p_ioi_art_var_box <- ggplot(data = ioi_art_var, aes(x = Condition, y = Mean, fil
 p_ioi_art_var_box
 ```
 
-#### Statistics
-##### Normality check
+### Statistics
+#### Normality check
 ```{r normality3, echo = FALSE}
 ioi_art_var_norm <- by(ioi_art_var$Mean, list(ioi_art_var$Condition), shapiro.test)
 print(ioi_art_var_norm)
 ```
 
-##### Paired t-test
+#### Paired t-test
 ```{r stats5, echo = FALSE}
 ioi_art_var_ttest <- t.test(ioi_art_var$Mean[ioi_art_var$Condition == "teaching"], ioi_art_var$Mean[ioi_art_var$Condition == "performing"], paired = TRUE)
 print(ioi_art_var_ttest)
 ```
 
-##### Effect size
+#### Effect size
 ```{r stats6, echo = FALSE}
 ioi_art_var_cohend <- cohen.d(ioi_art_var$Mean, ioi_art_var$Condition, paired = TRUE)
 print(ioi_art_var_cohend)
 ```
 
-### 9. Variability trial-by-trial - individual{#art_ind_var_trial}
+## 9. Variability trial-by-trial - individual{#art_ind_var_trial}
 - Average variability for each trial for each participant.
 
 ```{r ioi_art_var_trial, echo = FALSE}
@@ -459,8 +462,8 @@ colnames(ioi_art_var_trial) <- c("SubNr", "Condition", "Skill", "TrialNr", "N", 
 print(ioi_art_var_trial)
 ```
 
-#### Plot
-##### Line graph
+### Plot
+#### Line graph
 ```{r ioi_art_var_trial_line, echo = FALSE, fig.height = 8}
 p_ioi_art_var_trial <- ggplot(data = ioi_art_var_trial, aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
   geom_line() +
@@ -470,7 +473,7 @@ p_ioi_art_var_trial <- ggplot(data = ioi_art_var_trial, aes(x = TrialNr, y = Mea
 p_ioi_art_var_trial
 ```
 
-### 10. Variability trial-by-trial - group{#art_group_var_trial}
+## 10. Variability trial-by-trial - group{#art_group_var_trial}
 - Average variability for each trial for each condition.
 
 ```{r ioi_art_var_trial_all, echo = FALSE}
@@ -483,8 +486,8 @@ colnames(ioi_art_var_trial_all) <- c("Condition", "Skill", "TrialNr", "N", "Mean
 print(ioi_art_var_trial_all)
 ```
 
-#### Plot
-##### Line graph
+### Plot
+#### Line graph
 - Error bars show SEM of the mean
 
 ```{r ioi_art_var_trial_all_line, echo = FALSE}
@@ -497,11 +500,8 @@ p_ioi_art_var_trial_all <- ggplot(data = ioi_art_var_trial_all,
 p_ioi_art_var_trial_all
 ```
 
-###########
-###########
-
-## IOI-Dynamics
-### 1. All - individual{#dyn_ind_all}
+# IOI-Dynamics
+## 1. All - individual{#dyn_ind_all}
 - Average IOIs for each participant.
 
 ```{r ioi_dyn, echo = FALSE}
@@ -514,10 +514,10 @@ colnames(ioi_dyn) <- c("SubNr", "Condition", "Skill", "N", "Mean", "SD")
 print(ioi_dyn)
 ```
 
-#### Plot
-##### Bar chart
+### Plot
+#### Bar chart
 - Error bars show SD of the mean
-- A dashed line represents the tempo given by a metronome (80bpm)
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_dyn_bar,  echo = FALSE}
 p_ioi_dyn <- ggplot(data = ioi_dyn, aes(x = SubNr, y = Mean, fill = Condition)) +
@@ -525,12 +525,12 @@ p_ioi_dyn <- ggplot(data = ioi_dyn, aes(x = SubNr, y = Mean, fill = Condition)) 
   geom_errorbar(aes(ymin = Mean - SD, ymax = Mean + SD),
                 width = .2, position = position_dodge(.9)) +
   geom_hline(yintercept = 188, linetype = "dashed") + # Tempo
-  #annotate("text", 18, 188, label = "Tempo (80bpm)", vjust = -2, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
-  labs(y = "IOI (ms)", subtitle = "IOI: Dynamics")
+  #annotate("text", 18, 188, label = "Tempo (80bpm / IOI-188ms)", vjust = -2, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
+  labs(y = "IOI (ms)", subtitle = "IOI: Dynamics") + coord_cartesian(ylim = c(100, 280))
 p_ioi_dyn
 ```
 
-### 2. All - group{#dyn_group_all}
+## 2. All - group{#dyn_group_all}
 - Average IOIs for each condition.
 - Hypothesis: Participants will play slower when teaching.
 
@@ -544,10 +544,10 @@ colnames(ioi_dyn_all) <- c("Condition", "Skill", "N", "Mean", "SD", "SEM")
 print(ioi_dyn_all)
 ```
 
-#### Plot
-##### Bar chart
+### Plot
+#### Bar chart
 - Error bars show SEM of the mean
-- A dashed line represents the tempo given by a metronome (80bpm)
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_dyn_all_bar, echo = FALSE}
 p_ioi_dyn_all <- ggplot(data = ioi_dyn_all, aes(x = Condition, y = Mean, fill = Condition)) +
@@ -555,28 +555,28 @@ p_ioi_dyn_all <- ggplot(data = ioi_dyn_all, aes(x = Condition, y = Mean, fill = 
   geom_errorbar(aes(ymin = Mean - SEM, ymax = Mean + SEM),
                 width=.2, position = position_dodge(.9)) +
   geom_hline(yintercept = 188, linetype = "dashed") + # Tempo
-  #annotate("text", 1.5, 188, label = "Tempo (80bpm)", vjust = -2, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
+  #annotate("text", 1.5, 188, label = "Tempo (80bpm / IOI-188ms)", vjust = -2, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
   labs(y = "IOI (ms)", subtitle = "IOI: Dynamics") + coord_cartesian(ylim = c(120, 210)) +
   theme(legend.position = "None")
 p_ioi_dyn_all
 ```
 
-##### Box plot
-- A dashed line represents the tempo given by a metronome (80bpm)
+#### Box plot
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_dyn_all_box, echo = FALSE}
 p_ioi_dyn_all_box <- ggplot(data = ioi_dyn, aes(x = Condition, y = Mean, fill = Condition)) +
   geom_boxplot() +
   geom_dotplot(binaxis = "y", stackdir = "center", dotsize = 1) +
   geom_hline(yintercept = 188, linetype = "dashed") + # Tempo
-  #annotate("text", 1.5, 188, label = "Tempo (80bpm)", vjust = 5, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
+  #annotate("text", 1.5, 188, label = "Tempo (80bpm / IOI-188ms)", vjust = 5, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
   labs(y = "IOI (ms)", subtitle = "IOI: Dynamics") + #coord_cartesian(ylim = c(100, 210)) +
   theme(legend.position = "None")
 p_ioi_dyn_all_box
 ```
 
-#### Statistics
-##### Normality check
+### Statistics
+#### Normality check
 ```{r normality4, echo = FALSE}
 # Normality check
 ioi_dyn_norm <- by(ioi_dyn$Mean, list(ioi_dyn$Condition), shapiro.test)
@@ -588,13 +588,13 @@ ioi_dyn_ttest <- t.test(ioi_dyn$Mean[ioi_dyn$Condition == "teaching"], ioi_dyn$M
 print(ioi_dyn_ttest)
 ```
 
-##### Effect size
+#### Effect size
 ```{r stats8, echo = FALSE}
 ioi_dyn_cohend <- cohen.d(ioi_dyn$Mean, ioi_dyn$Condition, paired = TRUE)
 print(ioi_dyn_cohend)
 ```
 
-### 3. Phrase boundaries - individual{#dyn_ind_phrase}
+## 3. Phrase boundaries - individual{#dyn_ind_phrase}
 - Compare IOIs at phrase boundaries with others fir each participant.
 
 ```{r ioi_dyn_ch, echo = FALSE}
@@ -611,10 +611,10 @@ colnames(ioi_dyn_ch) <- c("SubNr", "Condition", "Skill", "Boundary", "N", "Mean"
 print(ioi_dyn_ch)
 ```
 
-#### Plot
-##### Bar chart
+### Plot
+#### Bar chart
 - Error bars show SD of the mean
-- A dashed line represents the tempo given by a metronome (80bpm)
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_dyn_ch_bar, echo = FALSE}
 p_ioi_dyn_ch <- ggplot(data = ioi_dyn_ch, aes(x = SubNr, y = Mean, fill = Condition)) +
@@ -623,12 +623,12 @@ p_ioi_dyn_ch <- ggplot(data = ioi_dyn_ch, aes(x = SubNr, y = Mean, fill = Condit
                 width = .2, position = position_dodge(.9)) +
   facet_grid(Boundary ~ .) +
   geom_hline(yintercept = 188, linetype = "dashed") + # Tempo
-  #annotate("text", 18, 188, label = "Tempo (80bpm)", vjust = -2, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
+  #annotate("text", 18, 188, label = "Tempo (80bpm / IOI-188ms)", vjust = -2, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
   labs(y = "IOI (ms)", subtitle = "IOI: Dynamics") + coord_cartesian(ylim = c(100, 280))
 p_ioi_dyn_ch
 ```
 
-### 4. Phrase boundaries - group{#dyn_group_phrase}
+## 4. Phrase boundaries - group{#dyn_group_phrase}
 - Compare IOIs at phrase boundaries with others in the two conditions.
 - Hypothesis: Participants will play more slowly at phrase boundaries compared to other locations.
 
@@ -642,10 +642,10 @@ colnames(ioi_dyn_ch_all) <- c("Condition", "Skill", "Boundary", "N", "Mean", "SD
 print(ioi_dyn_ch_all)
 ```
 
-#### Plot
-##### Bar chart
+### Plot
+#### Bar chart
 - Error bars show SEM of the mean
-- A dashed line represents the tempo given by a metronome (80bpm)
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_dyn_ch_all_bar, echo = FALSE}
 p_ioi_dyn_ch_all_bar <- ggplot(data = ioi_dyn_ch_all, aes(x = Boundary, y = Mean, fill = Condition)) +
@@ -653,33 +653,33 @@ p_ioi_dyn_ch_all_bar <- ggplot(data = ioi_dyn_ch_all, aes(x = Boundary, y = Mean
   geom_errorbar(aes(ymin = Mean - SEM, ymax = Mean + SEM),
                 width=.2, position = position_dodge(.9)) +
   geom_hline(yintercept = 188, linetype = "dashed") + # Tempo
-  #annotate("text", 1, 188, label = "Tempo (80bpm)", vjust = 2, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
+  #annotate("text", 1, 188, label = "Tempo (80bpm / IOI-188ms)", vjust = 2, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
   #facet_grid(. ~ Boundary) +
-  labs(y = "IOI (ms)", subtitle = "IOI: Dynamics") + coord_cartesian(ylim = c(100, 250))
+  labs(y = "IOI (ms)", subtitle = "IOI: Dynamics") + coord_cartesian(ylim = c(100, 210))
 p_ioi_dyn_ch_all_bar
 ```
 
-##### Box plot
-- A dashed line represents the tempo given by a metronome (80bpm)
+#### Box plot
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_dyn_ch_all_box, echo = FALSE}
 p_ioi_dyn_ch_box <- ggplot(data = ioi_dyn_ch, aes(x = Boundary, y = Mean, fill = Condition)) +
   geom_boxplot() +
   geom_dotplot(binaxis = "y", stackdir = "center", dotsize = 1, position = position_dodge(0.75)) +
   geom_hline(yintercept = 188, linetype = "dashed") + # Tempo
-  #annotate("text", 1.5, 188, label = "Tempo (80bpm)", vjust = 5, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
+  #annotate("text", 1.5, 188, label = "Tempo (80bpm / IOI-188ms)", vjust = 5, size = 5, family = "Helvetica Neue LT Std 57 Condensed") +
   labs(y = "IOI (ms)", subtitle = "IOI: Dynamics")
 p_ioi_dyn_ch_box
 ```
 
-#### Statistics
-##### Normality check
+### Statistics
+#### Normality check
 ```{r normality5, echo = FALSE}
 ioi_dyn_ch_norm <- by(ioi_dyn_ch$Mean, list(ioi_dyn_ch$Condition, ioi_dyn_ch$Boundary), shapiro.test)
 print(ioi_dyn_ch_norm)
 ```
 
-##### Two-way ANOVA (ez)
+#### Two-way ANOVA (ez)
 ```{r stats9, echo = FALSE}
 ioi_dyn_ch_aov <- ezANOVA(
   data = df_ioi_dyn
@@ -694,13 +694,13 @@ ioi_dyn_ch_aov$ANOVA$p <- round(ioi_dyn_ch_aov$ANOVA$p, 4)
 print(ioi_dyn_ch_aov)
 ```
 
-##### Two-way ANOVA (aov)
+#### Two-way ANOVA (aov)
 ```{r stats10, echo = FALSE}
 ioi_dyn_ch_aov_2 <- aov(Mean ~ Condition*Boundary + Error(SubNr/(Condition*Boundary)), data = ioi_dyn_ch)
 print(summary(ioi_dyn_ch_aov_2))
 ```
 
-### 5. Trial by trial - individual{#dyn_ind_trial}
+## 5. Trial by trial - individual{#dyn_ind_trial}
 - Average IOIs for each trial for each participant.
 
 ```{r ioi_dyn_trial, echo = FALSE}
@@ -713,9 +713,9 @@ colnames(ioi_dyn_trial) <- c("SubNr", "Condition", "Skill", "TrialNr", "N", "Mea
 print(ioi_dyn_trial)
 ```
 
-#### Plot
-##### Line graph
-- A dashed line represents the tempo given by a metronome (80bpm)
+### Plot
+#### Line graph
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_dyn_trial_line, echo = FALSE, fig.height = 8}
 p_ioi_dyn_trial <- ggplot(data = ioi_dyn_trial, aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
@@ -727,7 +727,7 @@ p_ioi_dyn_trial <- ggplot(data = ioi_dyn_trial, aes(x = TrialNr, y = Mean, group
 p_ioi_dyn_trial
 ```
 
-### 6. Trial by trial - group{#dyn_group_trial}
+## 6. Trial by trial - group{#dyn_group_trial}
 - Average IOIs for each trial for each condition.
 
 ```{r ioi_dyn_trial_all, echo = FALSE}
@@ -740,10 +740,10 @@ colnames(ioi_dyn_trial_all) <- c("Condition", "Skill", "TrialNr", "N", "Mean", "
 print(ioi_dyn_trial_all)
 ```
 
-#### Plot
-##### Line graph
+### Plot
+#### Line graph
 - Error bars show SEM of the mean
-- A dashed line represents the tempo given by a metronome (80bpm)
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_dyn_trial_all_line, echo = FALSE}
 p_ioi_dyn_trial_all <- ggplot(data = ioi_dyn_trial_all, aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
@@ -755,7 +755,7 @@ p_ioi_dyn_trial_all <- ggplot(data = ioi_dyn_trial_all, aes(x = TrialNr, y = Mea
 p_ioi_dyn_trial_all
 ```
 
-### 7. Variability all - individual{#dyn_ind_var_all}
+## 7. Variability all - individual{#dyn_ind_var_all}
 - Average variability for each participant.
 - IOI variability = SD/mean IOI (per trial)
 
@@ -763,10 +763,10 @@ p_ioi_dyn_trial_all
 # Create a data frame for variability (SD/)
 df_ioi_dyn_var <- data.frame()
 for (subnr in unique(df_ioi_dyn$SubNr)){
-  for (block in unique(df_ioi_dyn$BlockNr)){
+  for (block in c(1:4)){
     cond = as.character(unique(df_ioi_dyn$Condition[df_ioi_dyn$SubNr == subnr & df_ioi_dyn$BlockNr == block]))
     skill = as.character(unique(df_ioi_dyn$Skill[df_ioi_dyn$SubNr == subnr & df_ioi_dyn$BlockNr == block]))
-    for (trial in unique(df_ioi_dyn$TrialNr)){
+    for (trial in c(1:8)){
       df_current <- df_ioi_dyn %>% dplyr::filter(SubNr == subnr & BlockNr == block & TrialNr == trial)
       if (nrow(df_current) != 0){
         df_ioi_dyn_var <- rbind(df_ioi_dyn_var, 
@@ -787,8 +787,8 @@ colnames(ioi_dyn_var) <- c("SubNr", "Condition", "Skill", "N", "Mean", "SD")
 print(ioi_dyn_var)
 ```
 
-#### Plot
-##### Bar graph
+### Plot
+#### Bar graph
 - Error bars show SD of the mean
 
 ```{r ioi_dyn_var_bar, echo = FALSE}
@@ -800,7 +800,7 @@ p_ioi_dyn_var <- ggplot(data = ioi_dyn_var, aes(x = SubNr, y = Mean, fill = Cond
 p_ioi_dyn_var
 ```
 
-### 8. Variability all - group{#dyn_group_var_all}
+## 8. Variability all - group{#dyn_group_var_all}
 - Average variability for each condition.
 
 ```{r ioi_dyn_var_all, echo = FALSE}
@@ -813,8 +813,8 @@ colnames(ioi_dyn_var_all) <- c("Condition", "Skill", "N", "Mean", "SD", "SEM")
 print(ioi_dyn_var_all)
 ```
 
-#### Plot
-##### Bar graph
+### Plot
+#### Bar graph
 - Error bars show SEM of the mean
 
 ```{r ioi_dyn_var_all_bar, echo = FALSE}
@@ -827,7 +827,7 @@ p_ioi_dyn_var_all <- ggplot(data = ioi_dyn_var_all, aes(x = Condition, y = Mean,
 p_ioi_dyn_var_all
 ```
 
-##### Box plot
+#### Box plot
 ```{r ioi_dyn_var_all_box, echo = FALSE}
 p_ioi_dyn_var_box <- ggplot(data = ioi_dyn_var, aes(x = Condition, y = Mean, fill = Condition)) +
   geom_boxplot() +
@@ -837,8 +837,8 @@ p_ioi_dyn_var_box <- ggplot(data = ioi_dyn_var, aes(x = Condition, y = Mean, fil
 p_ioi_dyn_var_box
 ```
 
-#### Statistics
-##### Normality check
+### Statistics
+#### Normality check
 ```{r normality6, echo = FALSE}
 ioi_dyn_var_norm <- by(ioi_dyn_var$Mean, list(ioi_dyn_var$Condition), shapiro.test)
 print(ioi_dyn_var_norm)
@@ -854,7 +854,7 @@ ioi_dyn_var_cohend <- cohen.d(ioi_dyn_var$Mean, ioi_dyn_var$Condition, paired = 
 print(ioi_dyn_var_cohend)
 ```
 
-### 9. Variability trial-by-trial - individual{#dyn_ind_var_trial}
+## 9. Variability trial-by-trial - individual{#dyn_ind_var_trial}
 - Average variability for each trial for each participant.
 
 ```{r ioi_dyn_var_trial, echo = FALSE}
@@ -867,8 +867,8 @@ colnames(ioi_dyn_var_trial) <- c("SubNr", "Condition", "Skill", "TrialNr", "N", 
 print(ioi_dyn_var_trial)
 ```
 
-#### Plot
-##### Line graph
+### Plot
+#### Line graph
 ```{r ioi_dyn_var_trial_line, echo = FALSE, fig.height = 8}
 p_ioi_dyn_var_trial <- ggplot(data = ioi_dyn_var_trial, aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
   geom_line() +
@@ -878,7 +878,7 @@ p_ioi_dyn_var_trial <- ggplot(data = ioi_dyn_var_trial, aes(x = TrialNr, y = Mea
 p_ioi_dyn_var_trial
 ```
 
-### 10. Variability trial-by-trial - group{#dyn_group_var_trial}
+## 10. Variability trial-by-trial - group{#dyn_group_var_trial}
 Average variability for each trial for each condition.
 
 ```{r ioi_dyn_var_trial_all, echo = FALSE}
@@ -891,8 +891,8 @@ colnames(ioi_dyn_var_trial_all) <- c("Condition", "Skill", "TrialNr", "N", "Mean
 print(ioi_dyn_var_trial_all)
 ```
 
-#### Plot
-##### Line graph
+### Plot
+#### Line graph
 - Error bars show SEM of the mean
 
 ```{r ioi_dyn_var_trial_all_line, echo = FALSE}
@@ -905,13 +905,10 @@ p_ioi_dyn_var_trial_all <- ggplot(data = ioi_dyn_var_trial_all,
 p_ioi_dyn_var_trial_all
 ```
 
-###########
-###########
-
-## IOI-Order-Articulation
+# IOI-Order-Articulation
 - Investigate whether there is any order effect of the conditions.
 
-### 1. All{#art_order_group_all}
+## 1. All{#art_order_group_all}
 ```{r ioi_art_order_all, echo = FALSE}
 # For each participant
 ioi_art_order <- aggregate(IOI~SubNr*Condition*Skill*Order, data = df_ioi_art,
@@ -932,7 +929,7 @@ print(ioi_art_order_all)
 ### Plot
 #### Bar graph
 - Error bars show SEM of the mean
-- A dashed line represents the tempo given by a metronome (80bpm)
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_art_order_all_bar, echo = FALSE}
 p_ioi_art_order_all <- ggplot(data = ioi_art_order_all, aes(x = Condition, y = Mean, fill = Condition)) +
@@ -946,8 +943,8 @@ p_ioi_art_order_all <- ggplot(data = ioi_art_order_all, aes(x = Condition, y = M
 p_ioi_art_order_all
 ```
 
-##### Box plot
-- A dashed line represents the tempo given by a metronome (80bpm)
+#### Box plot
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_art_order_all_box, echo = FALSE}
 p_ioi_art_order_all_box <- ggplot(data = ioi_art_order, aes(x = Condition, y = Mean, fill = Condition)) +
@@ -960,15 +957,15 @@ p_ioi_art_order_all_box <- ggplot(data = ioi_art_order, aes(x = Condition, y = M
 p_ioi_art_order_all_box
 ```
 
-#### Statistics
-##### Normality check
+### Statistics
+#### Normality check
 ```{r normality7, echo = FALSE}
 # Normality check
 ioi_art_order_norm <- by(ioi_art_order$Mean, list(ioi_art_order$Condition, ioi_art_order$Order), shapiro.test)
 print(ioi_art_order_norm)
 ```
 
-##### Two-way ANOVA (ez)
+#### Two-way ANOVA (ez)
 ```{r stats13, echo = FALSE}
 ioi_art_order_aov <- ezANOVA(
   data = df_ioi_art
@@ -984,16 +981,16 @@ ioi_art_order_aov$ANOVA$p <- round(ioi_art_order_aov$ANOVA$p, 4)
 print(ioi_art_order_aov)
 ```
 
-##### Two-way ANOVA (aov)
+#### Two-way ANOVA (aov)
 ```{r stats14, echo = FALSE}
 ioi_art_order_aov_2 <- aov(Mean ~ Condition*Order + Error(SubNr/Condition) + Order, data = ioi_art_order)
 print(summary(ioi_art_order_aov_2))
 ```
 
-## IOI-Order-Dynamics
+# IOI-Order-Dynamics
 - Investigate whether there is any order effect of the conditions.
 
-### 1. All{#dyn_order_group_all}
+## 1. All{#dyn_order_group_all}
 ```{r ioi_dyn_order_all, echo = FALSE}
 # For each pdynicipant
 ioi_dyn_order <- aggregate(IOI~SubNr*Condition*Skill*Order, data = df_ioi_dyn,
@@ -1014,7 +1011,7 @@ print(ioi_dyn_order_all)
 ### Plot
 #### Bar graph
 - Error bars show SEM of the mean
-- A dashed line represents the tempo given by a metronome (80bpm)
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_dyn_order_all_bar, echo = FALSE}
 p_ioi_dyn_order_all <- ggplot(data = ioi_dyn_order_all, aes(x = Condition, y = Mean, fill = Condition)) +
@@ -1028,8 +1025,8 @@ p_ioi_dyn_order_all <- ggplot(data = ioi_dyn_order_all, aes(x = Condition, y = M
 p_ioi_dyn_order_all
 ```
 
-##### Box plot
-- A dashed line represents the tempo given by a metronome (80bpm)
+#### Box plot
+- A dashed line represents the tempo given by a metronome (80bpm / IOI-188ms)
 
 ```{r ioi_dyn_order_all_box, echo = FALSE}
 p_ioi_dyn_order_all_box <- ggplot(data = ioi_dyn_order, aes(x = Condition, y = Mean, fill = Condition)) +
@@ -1042,15 +1039,15 @@ p_ioi_dyn_order_all_box <- ggplot(data = ioi_dyn_order, aes(x = Condition, y = M
 p_ioi_dyn_order_all_box
 ```
 
-#### Statistics
-##### Normality check
+### Statistics
+#### Normality check
 ```{r normality8, echo = FALSE}
 # Normality check
 ioi_dyn_order_norm <- by(ioi_dyn_order$Mean, list(ioi_dyn_order$Condition, ioi_dyn_order$Order), shapiro.test)
 print(ioi_dyn_order_norm)
 ```
 
-##### Two-way ANOVA (ez)
+#### Two-way ANOVA (ez)
 ```{r stats15, echo = FALSE}
 ioi_dyn_order_aov <- ezANOVA(
   data = df_ioi_dyn
@@ -1066,15 +1063,15 @@ ioi_dyn_order_aov$ANOVA$p <- round(ioi_dyn_order_aov$ANOVA$p, 4)
 print(ioi_dyn_order_aov)
 ```
 
-##### Two-way ANOVA (aov)
+#### Two-way ANOVA (aov)
 ```{r stats16, echo = FALSE}
 ioi_dyn_order_aov_2 <- aov(Mean ~ Condition*Order + Error(SubNr/Condition) + Order, data = ioi_dyn_order)
 print(summary(ioi_dyn_order_aov_2))
 ```
 
-## Sequence plot
-#### Articulation{#sequence_art}
-```{r seq_art, fig.width = 15, fig.height = 5, echo = FALSE}
+# Sequence plot
+## Articulation{#sequence_art}
+```{r seq_art, fig.width = 20, fig.height = 5, echo = FALSE}
 # For each individual
 ioi_art_seq <- aggregate(IOI~SubNr*Condition*Skill*Interval, data = df_ioi_art,
                                  FUN = function(x){c(N = length(x), mean = mean(x), sd = sd(x))})
@@ -1100,8 +1097,8 @@ p_ioi_art_seq <- ggplot(data = ioi_art_seq_stats, aes(x = Interval, y = Mean, gr
 p_ioi_art_seq
 ```
 
-#### Dynamics{#sequence_dyn}
-```{r seq_dyn, fig.width = 15, fig.height = 5, echo = FALSE}
+## Dynamics{#sequence_dyn}
+```{r seq_dyn, fig.width = 20, fig.height = 5, echo = FALSE}
 # For each individual
 ioi_dyn_seq <- aggregate(IOI~SubNr*Condition*Skill*Interval, data = df_ioi_dyn,
                                  FUN = function(x){c(N = length(x), mean = mean(x), sd = sd(x))})
